
genfile = [['common_proto/login_service.proto', '../login_server/src/service/common_proto/'],
['common_proto/database_service.proto', '../database_server/src/service/common_proto/'],
['common_proto/deploy_service.proto', '../deploy_server/src/service/common_proto/'],
['common_proto/controller_service.proto', '../controller_server/src/service/common_proto/'],
['common_proto/game_service.proto', '../game_server/src/service/common_proto/'],
['common_proto/gate_service.proto', '../gate_server/src/service/common_proto/']
]
